--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,8 @@
 body {
-    font-family: -apply-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    height: 100vh
-}
-
-#react-target {
-    height: 100%
+  font-family:
+    -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial,
+    sans-serif;
+  margin: auto;
+  max-width: 38rem;
+  padding: 2rem;
 }
